# master-irp

./: .gitignore  Makefile  README.md  THIRD-PARTY-LICENSES  run_pipeline.sh  run_updater.sh
3rd-party-licenses/: curl  pugixml
deliverables/: Makefile  README.md
deliverables/plan/: plan.tex  references.bib  report-template.cls
deliverables/thesis/: 1  references.bib  report-template.cls  thesis.tex
logbook/: logbook.md
presentation/: poster.odp
presentation/viva/: slides.tex
python-env/: environment.yml  requirements.txt
src/: CMakeLists.txt  proto1.py  proto2.py
src/llm/: config.py  config_gui.py  llm_pipeline.py
src/misc/: 100_queries.txt  doc_dist_pie.py  search_eng_profiling.py
src/pipeline/: config.py  config_gui.py  config_gui_base.py  llm_interface.py  llm_pipeline.py  search_combined.py  setup_schedules.py
src/scheduler/: scheduler.py
src/search/: curl-example.cpp  date_util.cpp  date_util.h  index.cpp  index.h  indexer.cpp  indexer.h  indexer_main.cpp  rm_doc.cpp  scraper.cpp  scraper.h  searcher.cpp  searcher.h  searcher_main.cpp  test.cpp  test_bug1.cpp  test_bug2.cpp  test_index.cpp  test_onewebpage.cpp  test_parser_html.cpp  test_url.cpp  tests.cpp  tmp_replace_date.cpp  url.cpp  url.h  url2html.cpp  url2html.h  url2rss.cpp  url2rss.h  utility.cpp  utility.h  webpage.cpp  webpage.h
src/search/tools/: doc_dist.cpp  indexer_main.cpp  indexing_common.h  rm_doc.cpp  searcher_main.cpp  upd_doc.cpp  updater_main.cpp
src/sha-2/: sha-256.c  sha-256.h
src/tests/: test_bug3.cpp  test_date_parsing.cpp  test_index.cpp  test_onewebpage.cpp  test_parser_html.cpp  test_rss.cpp  test_url.cpp
title/: title.toml
